Review Changes to add authz and the upgrading note Closes #12102
Signed-off-by: rmartinc <rmartinc@redhat.com>